Fix icon spacing

--- a/src/MudBlazor/Styles/components/_list.scss
+++ b/src/MudBlazor/Styles/components/_list.scss
@@ -86,7 +86,7 @@
 .mud-list-item-icon {
   color: var(--mud-palette-action-default);
   display: inline-flex;
-  min-width: 56px;
+  padding-right: 10px;
   flex-shrink: 0;
 }
 
